# pyspark-emr-delta

./: .gitignore  README.md  prepare_submit.sh  pyproject.toml  requirements.txt
pyspark_emr_delta/: config.py  main.py  utils.py
